tests/rules/unused-export/valid/consumer.ts
import { usedHelper } from "./lib";

function main() {
  return usedHelper();
}
